# tech-challenge-books-api

./: pyproject.toml
.local_data/: books.csv
core/: app.py  settings.py
data/: books.csv  csv_store.py  db.py
models/: book.py  user.py
scripts/: scrape_books.py
